# xdelta

./: .gitignore  CMakeLists.txt
cmake/: xdelta3Config.cmake
